[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/about.png" type="Texture" id=1]
[ext_resource path="res://page/navigation/sliderSceneHelp.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.00107944
anchor_top = 0.0595614
anchor_right = 1.00108
anchor_bottom = 0.119561
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.843137, 0.411765, 0.211765, 1 )
text = "Voyelle Orale"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Main" type="VBoxContainer" parent="."]
anchor_left = 0.00411183
anchor_top = 0.101754
anchor_right = 1.00411
anchor_bottom = 1.10175
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainMargin" type="MarginContainer" parent="Main"]
margin_right = 171.0
margin_bottom = 42.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxMain" type="HBoxContainer" parent="Main/MainMargin"]
margin_right = 171.0
margin_bottom = 42.0
theme = ExtResource( 4 )

[node name="ButtonContainer" type="VBoxContainer" parent="Main/MainMargin/HBoxMain"]
margin_right = 167.0
margin_bottom = 42.0
theme = ExtResource( 4 )
alignment = 1

[node name="Learn" type="Button" parent="Main/MainMargin/HBoxMain/ButtonContainer"]
margin_right = 167.0
margin_bottom = 19.0
theme = ExtResource( 3 )
text = "J'apprends"

[node name="Train" type="Button" parent="Main/MainMargin/HBoxMain/ButtonContainer"]
margin_top = 23.0
margin_right = 167.0
margin_bottom = 42.0
theme = ExtResource( 3 )
text = "Je m'entraine"

[node name="Image" type="Control" parent="Main/MainMargin/HBoxMain"]
margin_left = 171.0
margin_right = 171.0
margin_bottom = 42.0
theme = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Main/MainMargin/HBoxMain/Image"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/MainMargin/HBoxMain/ButtonContainer/Learn" to="." method="_on_Learn_pressed"]
[connection signal="pressed" from="Main/MainMargin/HBoxMain/ButtonContainer/Train" to="." method="_on_Train_pressed"]
